# dsrl_openpi

./: .gitignore  pyproject.toml
bringup/: 01.convert.sh  02.compute.sh  03.finetune.sh  11.server.sh
examples/droid/: convert_droid_h5_to_lerobot.py  pickup_workpiece.md
scripts/: compute_norm_stats.py
src/openpi/policies/: droid_policy.py
src/openpi/shared/: download.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py
